update router and basic login/signup functional

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -10,6 +10,7 @@
       name="description"
       content="CIS 197 Final Project"
     />
+    <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link rel="stylesheet" href="/css/app.css">
@@ -44,10 +45,10 @@
           </a>
           <div class="navbar-item">
             <div class="buttons">
-              <a class="button is-light">
+              <a class="button is-light" href="/signup">
                 <strong>Sign up</strong>
               </a>
-              <a class="button is-primary">
+              <a class="button is-primary" href="/login">
                 Log in
               </a>
             </div>
@@ -55,6 +56,10 @@
         </div>
       </div>
     </nav>
+    <!-- main website content -->
+    <main>
+      
+    </main>
     <script src="/bundle.js"></script>
   </body>
 </html>
