--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,11 +1,34 @@
+* {
+  font-family: 'Open Sans', sans-serif;
+}
+p {
+  font-size: 10pt;
+  margin-bottom: .5rem;
+}
 .navbar {
   background-color: #0b1c2b;
   padding: 0 2.5%;
+  font-size: 10pt;
 }
 a.navbar-item {
   color: white;
 }
-.navbar-item a.button {
-  height: 2em;
+.navbar-item a.button,
+form .button {
+  padding: 2.5pt auto;
+  height: 2.25em;
+  font-weight: 300;
+  font-size: 10pt;
+}
+
+.form-wrapper {
+  margin: 5% auto;
+  max-width: 80%;
+}
+.form-wrapper h3 {
   font-weight: 400;
+  font-size: 1.5rem;
+}
+form .label, form > input {
+  font-size: 10pt;
 }
