--- a/public/views/signup.ejs
+++ b/public/views/signup.ejs
@@ -69,7 +69,7 @@
               <input class="input" type="text" placeholder="Text input">
             </div>
           </div> -->
-          <% if (message.length > 0) { %>
+          <% if (message && (message.length > 0)) { %>
             <p class="help is-danger"><%=message%></p>
           <% } %>
 
