--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -46,9 +46,9 @@
           <div class="navbar-item">
             <div class="buttons">
               <a class="button is-light" href="/signup">
-                <strong>Sign up</strong>
+                Sign up
               </a>
-              <a class="button is-primary" href="/login">
+              <a class="button is-inverted" href="/login">
                 Log in
               </a>
             </div>
