--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,10 @@
 * {
   font-family: 'Open Sans', sans-serif;
 }
+h2 {
+  font-size: 16pt;
+  font-weight: 600;
+}
 p {
   font-size: 10pt;
   margin-bottom: .5rem;
@@ -13,12 +17,82 @@ p {
 a.navbar-item {
   color: white;
 }
+a.navbar-item:hover {
+  color: white;
+  background-color: transparent;
+  box-shadow: inset 0 -2px 0 white;
+  transition: .25s ease;
+}
 .navbar-item a.button,
 form .button {
   padding: 2.5pt auto;
   height: 2.25em;
   font-weight: 300;
   font-size: 10pt;
+}
+.banner {
+  background: url('https://finestayslovenia.com/wp-content/uploads/2019/01/lake-bled-winter.jpg');
+  /* height: 40vh; */
+  background-position: 60% 45%;
+}
+.banner .hero {
+  background-color:rgba(255,255,255,.2);
+  height: 100%;
+}
+.banner > .hero .hero-body {
+  text-align: center;
+  margin: 0 auto;
+}
+
+.discover {
+  padding: 1rem 7.5%;
+  margin-top: 2.5rem;
+  margin-bottom: 5rem;
+}
+.columns-header {
+  margin-top: 1rem;
+  padding: 0 .75rem;
+}
+.discover p {
+  font-style: italic;
+  color: rgba(75,75,75, .75);
+  margin-bottom: 1.5rem;
+}
+.discover-entry {
+  padding: 1rem 1.5rem;
+}
+.empty > .discover-caption > h4 {
+  font-weight: 300;
+  color: rgba(25,25,25, .75);
+}
+
+.discover-image {
+  position: relative;
+  background: rgba(50,50,50,.25);
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  background-size: cover;
+  background-position: 50% 50% !important;
+}
+.discover-caption {
+  position: relative;
+  background-color: rgba(255,255,255,.25);
+  height: 100%;
+  z-index: 2;
+}
+.discover-caption h4 {
+  position: relative;
+  background-color: none;
+  top: 120px;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+}
+
+.hero-body .title, 
+.hero-body .subtitle {
+  color: white;
 }
 
 .form-wrapper {
