--- a/public/css/app.css
+++ b/public/css/app.css
@@ -46,8 +46,8 @@ form .button {
 
 .discover {
   padding: 1rem 7.5%;
-  margin-top: 2.5rem;
-  margin-bottom: 5rem;
+  margin-top: 2rem;
+  margin-bottom: 4rem;
 }
 .columns-header {
   margin-top: 1rem;
@@ -56,6 +56,8 @@ form .button {
 .discover p {
   font-style: italic;
   color: rgba(75,75,75, .75);
+  margin-top: .25rem;
+  font-size: 11pt;
   margin-bottom: 1.5rem;
 }
 .discover-entry {
@@ -65,7 +67,6 @@ form .button {
   font-weight: 300;
   color: rgba(25,25,25, .75);
 }
-
 .discover-image {
   position: relative;
   background: rgba(50,50,50,.25);
@@ -74,6 +75,8 @@ form .button {
   object-fit: cover;
   background-size: cover;
   background-position: 50% 50% !important;
+  border: 1px solid rgba(50,50,50,.25);
+  border-radius: 5px;
 }
 .discover-caption {
   position: relative;
