new css sheet to separate globals

--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/global.css">
     <title>TravelBook | CIS 197</title>
   </head>
   <body>
@@ -106,6 +107,21 @@
         </form>
       </div>
     </main>
+    <footer class="footer">
+      <div class="content columns">
+        <div class="column">
+          <p class="text-left">
+            Andrew Cui | CIS 197
+          </p>
+        </div>
+        <div class="column">
+          <p class="bulmaCredit">
+            Thank you to the <strong>Bulma</strong> CSS package by <a href="https://jgthms.com">Jeremy Thomas</a>, source code licensed
+            <a href="http://opensource.org/licenses/mit-license.php">MIT</a>
+          </p>
+        </div>
+      </div>
+    </footer>
     <script src="/bundle.js"></script>
   </body>
 </html>
