--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,35 +1,6 @@
-* {
-  font-family: 'Open Sans', sans-serif;
-}
-h2 {
-  font-size: 16pt;
-  font-weight: 600;
-}
-p {
-  font-size: 10pt;
-  margin-bottom: .5rem;
-}
-.navbar {
-  background-color: #0b1c2b;
-  padding: 0 2.5%;
-  font-size: 10pt;
-}
-a.navbar-item {
-  color: white;
-}
-a.navbar-item:hover {
-  color: white;
-  background-color: transparent;
-  box-shadow: inset 0 -2px 0 white;
-  transition: .25s ease;
-}
-.navbar-item a.button,
-form .button {
-  padding: 2.5pt auto;
-  height: 2.25em;
-  font-weight: 300;
-  font-size: 10pt;
-}
+/* app.css - specific-app based css styles */
+
+/* globals and fonts */
 .banner {
   background: url('https://finestayslovenia.com/wp-content/uploads/2019/01/lake-bled-winter.jpg');
   /* height: 40vh; */
@@ -82,7 +53,6 @@ form .button {
   position: relative;
   background-color: rgba(255,255,255,.25);
   height: 100%;
-  z-index: 2;
 }
 .discover-caption h4 {
   position: relative;
