--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -77,7 +77,7 @@
           <div class="hero-body justify-content-center">
             <div class="container">
               <h1 class="title">
-                Hero title
+                TravelBook
               </h1>
               <h2 class="subtitle">
                 Hero subtitle
@@ -96,7 +96,7 @@
           <!-- trip 1 -->
           <div class="column discover-entry">
             <% if (data && data[0].name) { %>
-              <a href="<%='trip/get/' + data[0].tripID%>">
+              <a href="<%='trip/get/' + data[0].tripID%>" target="_blank">
                 <div class="discover-image" style="background: url(<%=data[0].img%>);">
                   <div class="discover-caption">
                     <h4><%=data[0].name%></h4>
@@ -115,7 +115,7 @@
           <!-- trip 2 -->
           <div class="column discover-entry">
             <% if (data && data[1].name) { %>
-              <a href="<%='trip/get/' + data[1].tripID%>">
+              <a href="<%='trip/get/' + data[1].tripID%>" target="_blank">
                 <div class="discover-image" style="background: url(<%=data[1].img%>);">
                   <div class="discover-caption">
                     <h4><%=data[1].name%></h4>
@@ -134,7 +134,7 @@
           <!-- trip 3 -->
           <div class="column discover-entry">
             <% if (data && data[2].name) { %>
-              <a href="<%='trip/get/' + data[2].tripID%>">
+              <a href="<%='trip/get/' + data[2].tripID%>" target="_blank">
                 <div class="discover-image" style="background: url(<%=data[2].img%>);">
                   <div class="discover-caption">
                     <h4><%=data[2].name%></h4>
@@ -153,7 +153,7 @@
           <!-- trip 4 -->
           <div class="column discover-entry">
             <% if (data && data[3].name) { %>
-              <a href="<%='trip/get/' + data[3].tripID%>">
+              <a href="<%='trip/get/' + data[3].tripID%>" target="_blank">
                 <div class="discover-image" style="background: url(<%=data[3].img%>);">
                   <div class="discover-caption">
                     <h4><%=data[3].name%></h4>
