--- a/public/views/signup.ejs
+++ b/public/views/signup.ejs
@@ -36,7 +36,7 @@
           <a class="navbar-item">
             Discover
           </a>
-          <a class="navbar-item">
+          <a class="navbar-item" href="/trip/random" target="_blank">
             Random
           </a>
         </div>
