--- a/public/views/trip.ejs
+++ b/public/views/trip.ejs
@@ -72,105 +72,25 @@
     <!-- main website content -->
     <main>
       <!-- hero banner -->
-      <section class="banner">
+      <section class="banner" style="background: url(<%=data[0].img%>); background-size: cover; background-position: 50% 50%;">
         <div class="hero is-bold is-medium">
           <div class="hero-body justify-content-center">
             <div class="container">
               <h1 class="title">
-                TravelBook
+                <% if (data && data[0].location) { %>
+                  <%=data[0].location%>
+                <%}%>
               </h1>
               <h3 class="subtitle">
-                Social method of finding your next vacation
+                <% if (data && data[0].keywords) { %>
+                  <%=data[0].keywords%>
+                <%}%>
               </h3>
             </div>
           </div>
         </div>
       </section>
-      <!-- discover currently -->
-      <section class="discover">
-        <div class="columns-header">
-          <h2>DISCOVER</h2>
-          <p>four locations from around the world</p>
-        </div>
-        <div class="columns">
-          <!-- trip 1 -->
-          <div class="column discover-entry">
-            <% if (data && data[0].location) { %>
-              <a href="<%='trip/get/' + data[0].tripID%>" target="_blank">
-                <div class="discover-image" style="background: url(<%=data[0].img%>);">
-                  <div class="discover-caption">
-                    <h4><%=data[0].location%></h4>
-                  </div>
-                </div>
-              </a>
-            <% } else { %>
-              <!-- blank filler -->
-              <div class="discover-image empty">
-                <div class="discover-caption">
-                  <h4>none</h4>
-                </div>
-              </div>
-            <% } %>
-          </div>
-          <!-- trip 2 -->
-          <div class="column discover-entry">
-            <% if (data && data[1].location) { %>
-              <a href="<%='trip/get/' + data[1].tripID%>" target="_blank">
-                <div class="discover-image" style="background: url(<%=data[1].img%>);">
-                  <div class="discover-caption">
-                    <h4><%=data[1].location%></h4>
-                  </div>
-                </div>
-              </a>
-            <% } else { %>
-              <!-- blank filler -->
-              <div class="discover-image empty"></i>
-                <div class="discover-caption">
-                  <h4>none</h4>
-                </div>
-              </div>
-            <% } %>
-          </div>
-          <!-- trip 3 -->
-          <div class="column discover-entry">
-            <% if (data && data[2].location) { %>
-              <a href="<%='trip/get/' + data[2].tripID%>" target="_blank">
-                <div class="discover-image" style="background: url(<%=data[2].img%>);">
-                  <div class="discover-caption">
-                    <h4><%=data[2].location%></h4>
-                  </div>
-                </div>
-              </a>
-            <% } else { %>
-              <!-- blank filler -->
-              <div class="discover-image empty"></i>
-                <div class="discover-caption">
-                  <h4>none</h4>
-                </div>
-              </div>
-            <% } %>
-          </div>
-          <!-- trip 4 -->
-          <div class="column discover-entry">
-            <% if (data && data[3].location) { %>
-              <a href="<%='trip/get/' + data[3].tripID%>" target="_blank">
-                <div class="discover-image" style="background: url(<%=data[3].img%>);">
-                  <div class="discover-caption">
-                    <h4><%=data[3].location%></h4>
-                  </div>
-                </div>
-              </a>
-            <% } else { %>
-              <!-- blank filler -->
-              <div class="discover-image empty"></i>
-                <div class="discover-caption">
-                  <h4>none</h4>
-                </div>
-              </div>
-            <% } %>
-          </div>
-        </div>
-      </section>
+      
       <!--  new section -->
       <section>
 
