--- a/public/css/global.css
+++ b/public/css/global.css
@@ -43,8 +43,8 @@ form .button {
 }
 /* footer - check position */
 .footer {
-  position: absolute;
-  bottom: -6rem;
+  position: relative;
+  bottom: 0;
   width: 100%;
   height: 1rem;
   padding: 1.75rem 3.5rem 3.25rem;
